docs/pages/versions/v46.0.0/sdk/imagepicker.mdx
---
title: ImagePicker
description: A library that provides access to the system's UI for selecting images and videos from the phone's library or taking a photo with the camera.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-46/packages/expo-image-picker'
packageName: 'expo-image-picker'
iconUrl: '/static/images/packages/expo-image-picker.png'
---

import {
  ConfigReactNative,
  ConfigPluginExample,
  ConfigPluginProperties,
} from '~/components/plugins/ConfigSection';
import { AndroidPermissions, IOSPermissions } from '~/components/plugins/permissions';
import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import PlatformsSection from '~/components/plugins/PlatformsSection';
import Video from '~/components/plugins/Video';
import { SnackInline } from '~/ui/components/Snippet';
import { BoxLink } from '~/ui/components/BoxLink';
import { GithubIcon } from '@expo/styleguide-icons';
import { PlatformTags } from '~/ui/components/Tag';

**`expo-image-picker`** provides access to the system's UI for selecting images and videos from the phone's library or taking a photo with the camera.

<Video file={'sdk/imagepicker.mp4'} loop={false} />

<PlatformsSection android emulator ios simulator web />

## Installation

<APIInstallSection />

#### Known issues&ensp;<PlatformTags platforms={['ios']} />

On iOS, when an image (usually of a [higher resolution](http://www.openradar.me/49866214)) is picked from the camera roll, the result of the cropped image gives the wrong value for the cropped rectangle in some cases. Unfortunately, this issue is with the underlying `UIImagePickerController` due to a bug in the closed-source tools built into iOS.

## Configuration in app.json/app.config.js

You can configure `expo-image-picker` using its built-in [config plugin](/config-plugins/introduction/) if you use config plugins in your project ([EAS Build](../../../build/introduction.mdx) or `expo run:[android|ios]`). The plugin allows you to configure various properties that cannot be set at runtime and require building a new app binary to take effect.

<ConfigReactNative>

Learn how to configure the native projects in the [installation instructions in the `expo-image-picker` repository](https://github.com/expo/expo/tree/main/packages/expo-image-picker#installation-in-bare-react-native-projects).

</ConfigReactNative>

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-image-picker",
        {
          "photosPermission": "The app accesses your photos to let you share them with your friends."
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'photosPermission',
      platform: 'ios',
      description: 'A string to set the NSPhotoLibraryUsageDescription permission message.',
      default: '"Allow $(PRODUCT_NAME) to access your photos"',
    },
    {
      name: 'cameraPermission',
      platform: 'ios',
      description: 'A string to set the NSCameraUsageDescription permission message.',
      default: '"Allow $(PRODUCT_NAME) to access your camera"',
    },
    {
      name: 'microphonePermission',
      platform: 'ios',
      description: 'A string to set the NSMicrophoneUsageDescription permission message.',
      default: '"Allow $(PRODUCT_NAME) to access your microphone"',
    },
  ]}
/>

## Usage

<SnackInline label='Image Picker' dependencies={['expo-image-picker']}>

```js
import React, { useState, useEffect } from 'react';
import { Button, Image, View, Platform } from 'react-native';
import * as ImagePicker from 'expo-image-picker';

export default function ImagePickerExample() {
  const [image, setImage] = useState(null);

  const pickImage = async () => {
    // No permissions request is necessary for launching the image library
    let result = await ImagePicker.launchImageLibraryAsync({
      mediaTypes: ImagePicker.MediaTypeOptions.All,
      allowsEditing: true,
      aspect: [4, 3],
      quality: 1,
    });

    console.log(result);

    if (!result.cancelled) {
      setImage(result.uri);
    }
  };

  return (
    <View style={{ flex: 1, alignItems: 'center', justifyContent: 'center' }}>
      <Button title="Pick an image from camera roll" onPress={pickImage} />
      {image && <Image source={{ uri: image }} style={{ width: 200, height: 200 }} />}
    </View>
  );
}
```

</SnackInline>

When you run this example and pick an image, you will see the image that you picked show up in your app, and something similar to the following logged to your console:

```json
{
  "cancelled": false,
  "height": 1611,
  "width": 2148,
  "uri": "file:///data/user/0/host.exp.exponent/cache/cropped1814158652.jpg"
}
```

### With AWS S3

<BoxLink
  title="AWS storage example"
  description="An example of how to use AWS storage can be found in with-aws-storage-upload."
  Icon={GithubIcon}
  href="https://github.com/expo/examples/tree/master/with-aws-storage-upload"
/>

See [Amplify documentation](https://docs.amplify.aws/) guide to set up your project correctly.

### With Firebase

<BoxLink
  title="Firebase storage example"
  description="An example of how to use Firebase storage can be found in with-firebase-storage-upload."
  Icon={GithubIcon}
  href="https://github.com/expo/examples/tree/master/with-firebase-storage-upload"
/>

See [Using Firebase](/guides/using-firebase/) guide to set up your project correctly.

## API

```js
import * as ImagePicker from 'expo-image-picker';
```

<APISection packageName="expo-image-picker" apiName="ImagePicker" />

## Permissions

### Android

The following permissions are added automatically through the library **AndroidManifest.xml**.

<AndroidPermissions permissions={['CAMERA', 'READ_EXTERNAL_STORAGE', 'WRITE_EXTERNAL_STORAGE']} />

### iOS

The following usage description keys are used by the APIs in this library.

<IOSPermissions
  permissions={[
    'NSMicrophoneUsageDescription',
    'NSPhotoLibraryUsageDescription',
    'NSCameraUsageDescription',
  ]}
/>
